# FerrOS-librust

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs
src/allocator/: linked_list.rs  mod.rs
src/env/: mod.rs
src/interfaces/keyboard/: layout.rs  mod.rs
src/io/: mod.rs
src/memory/: mod.rs
src/syscall/: mod.rs  popen.rs
src/terminal/: mod.rs
src/testing/: mod.rs
