[package]
name = "ferr_os_librust"
version = "0.1.0"
authors = [
    "Constantin GIERCZAK--GALLE <constantin.gierczak-galle@ens.fr>",
    "Samuel VIVIEN",
    "Paul FOURNIER <paul.fournier@ens.psl.eu>",
    "Gabriel DORIATH DÖHLER <gabriel.doriath.dohler@ens.psl.eu>",
]
edition = "2018"

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
spin = "0.5.2"
x86_64 = "0.13.2"
pic8259_simple =  {git="https://github.com/Pollux3737/pic8259_simple.git"}
pc-keyboard = "*"
linked_list_allocator = "*"
uart_16550 = "*"
bitflags = "*"
bit_field = "*"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]


[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "*"
default-features = false
features = ["alloc"]
